added template for layout

--- a/djangoblog/articles/templates/articles/article_list.html
+++ b/djangoblog/articles/templates/articles/article_list.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>article list</title>
-</head>
-<body>
+{% extends 'base_layout.html' %}
+
+{% block content %}
     <h1>article listasdsd</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quasi, voluptatum dicta deserunt ratione odit rem in, magni reprehenderit aspernatur at nostrum expedita numquam tenetur asperiores cupiditate. Optio, sequi temporibus.</p>
-</body>
-</html>
+    <div class="articles">
+        {% for article in articles %}
+            <div class="article">
+                <h2><a href="">{{ article.title }}</a></h2>
+                <p>{{ article.snippet }}</p>
+                <h4>{{ article.date }}</h4>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
+
+
