--- a/djangoblog/articles/templates/articles/article_list.html
+++ b/djangoblog/articles/templates/articles/article_list.html
@@ -5,7 +5,7 @@
     <div class="articles">
         {% for article in articles %}
             <div class="article">
-                <h2><a href="">{{ article.title }}</a></h2>
+                <h2><a href="{% url 'articles:detail' slug=article.slug %}">{{ article.title }}</a></h2>
                 <p>{{ article.snippet }}</p>
                 <h4>{{ article.date }}</h4>
             </div>
