--- a/djangoblog/templates/base_layout.html
+++ b/djangoblog/templates/base_layout.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <h1><a href="{% url 'articles:list' %}">LOGO</a></h1>
         {% block content %}
         {% endblock  %}
     </div>
