--- a/djangoblog/articles/templates/articles/article_detail.html
+++ b/djangoblog/articles/templates/articles/article_detail.html
@@ -4,9 +4,10 @@
 
 <h1>article listasdsd</h1>
 <div class="articles">
-        <div class="article">
-            <h2><a href="{% url 'articles:detail' slug=article.slug %}">{{ article.title }}</a></h2>
-            <p>{{ article.snippet }}</p>
+    <div class="article">
+            <img src="{{ article.thumb.url }}" alt="">
+            <h2>{{ article.title }}</h2>
+            <p>{{ article.body }}</p>
             <h4>{{ article.date }}</h4>
         </div>
 </div>
