--- a/djangoblog/accounts/templates/accounts/login.html
+++ b/djangoblog/accounts/templates/accounts/login.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <h1>Signup</h1>
-    <form action="/accounts/signup/" class="site-form" method='post'>
+    <form action="{% url 'accounts:login' %}" class="site-form" method='post'>
         {% csrf_token %}
         {{ form }}
-        <input type='submit' value='Signup'>
+        <input type='submit'  value='Login'>
     </form>
 {% endblock %}
