added logout and save to db functionality

--- a/djangoblog/articles/templates/articles/article_detail.html
+++ b/djangoblog/articles/templates/articles/article_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>article listasdsd</h1>
+<h1>article list</h1>
 <div class="articles">
     <div class="article">
             <img src="{{ article.thumb.url }}" alt="">
