--- a/djangoblog/accounts/templates/accounts/login.html
+++ b/djangoblog/accounts/templates/accounts/login.html
@@ -1,10 +1,13 @@
 {% extends 'base_layout.html' %}
 
 {% block content %}
-    <h1>Signup</h1>
+    <h1>Login</h1>
     <form action="{% url 'accounts:login' %}" class="site-form" method='post'>
         {% csrf_token %}
         {{ form }}
+        {% if request.GET.next %}
+            <input type="hidden" name='next' value="{{ request.GET.next }}">
+        {% endif %}
         <input type='submit'  value='Login'>
     </form>
 {% endblock %}
