--- a/djangoblog/templates/base_layout.html
+++ b/djangoblog/templates/base_layout.html
@@ -11,13 +11,27 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1><a href="{% url 'articles:list' %}">LOGO</a></h1>
+        <h1><a href="{% url 'home' %}">LOGO</a></h1>
         <nav>
             <ul>
-                <form action="{% url 'accounts:logout' %}" method='post'>
-                    {% csrf_token %}
-                    <button type='submit'>logout</button>
-                </form>
+                {% if user.is_authenticated %}
+                <li>
+                    <form action="{% url 'accounts:logout' %}" method='post'>
+                        {% csrf_token %}
+                        <button type='submit'>logout</button>
+                    </form>
+                </li>
+                <li>
+                    <a href="{% url 'articles:create' %}">create article</a>
+                </li>
+                {% else %}
+                    <li>
+                        <a href="{% url 'accounts:login' %}">login</a> 
+                    </li>
+                    <li>
+                        <a href="{% url 'accounts:signup' %}">sign up</a>
+                    </li>
+                {% endif %}
             </ul>
         </nav>
         {% block content %}
